--- a/dev/jade/js/scripts.jade
+++ b/dev/jade/js/scripts.jade
@@ -1,8 +1,8 @@
 //- Google Api keyCode
--var apiKey = 'AIzaSyDQudwriMm1VUlBvkttmA56nEv2gg-F-x8'
+-var apiKey = 'AIzaSyD66DsCaW25KKSywaff7P9cOtfV0IwJF7Q'
 
 script(src=path_js + "vendor.min.js", charset="UTF-8")
 script(src=path_js + "plugins/plugins.min.js", charset="UTF-8")
 script(src=path_js + "components/components.js", charset="UTF-8")
 script(src=path_js + "core.js", charset="UTF-8")
-script(src="https://maps.googleapis.com/maps/api/js?key=" + apiKey + "&callback=initMap", async, defer)
+script(async, defer src="https://maps.googleapis.com/maps/api/js?key=" + apiKey + "&callback=initMap")
