--- a/dev/sass/site/components/_components.scss
+++ b/dev/sass/site/components/_components.scss
@@ -31,12 +31,6 @@
 //- Social side bar
 @import "comp-social-side-bar";
 
-//- Animated canvas
-@import "comp-animated-canvas";
-
-//- Feature box
-@import "comp-feature-box";
-
 //- Footer
 @import "comp-footer";
 
@@ -58,5 +52,8 @@
 //- Pager header
 @import "comp-page-header";
 
-//- breadcrumbs
+//- Breadcrumbs
 @import "comp-breadcrumbs";
+
+//- Cta
+@import "comp-cta-box";
