--- a/dev/sass/site/core/_layout.scss
+++ b/dev/sass/site/core/_layout.scss
@@ -18,6 +18,9 @@
 	&--motive {
 		background-color: $brand-primary;
 	}
+	&--gray {
+		background-color: $gray-lighter;
+	}
 	&--bottom0 {
 		padding-bottom: 0;
 	}
