--- a/dev/sass/site/core/_typography.scss
+++ b/dev/sass/site/core/_typography.scss
@@ -3,6 +3,11 @@
 		outline: none !important;
 	}
 }
+
+h1,h2,h3,h4,h5,h6 {
+	line-height: 1.4;
+}
+
 a {
 	@include transition;
 	&.link {
@@ -23,6 +28,15 @@ a {
 			color: $brand-primary;
 			&:after {
 				background-color: $brand-primary;
+			}
+		}
+		&--motive {
+			color: $brand-second;
+			&:hover {
+				color: #fff;
+				&:after {
+					background-color: $brand-second;
+				}
 			}
 		}
 	}
