--- a/dev/sass/site/components/_components.scss
+++ b/dev/sass/site/components/_components.scss
@@ -57,3 +57,12 @@
 
 //- Cta
 @import "comp-cta-box";
+
+//- Image box
+@import "comp-image-box";
+
+//- Address box
+@import "comp-address-box";
+
+//- Contact form
+@import "comp-form";
