--- a/dev/jade/includes/footer.jade
+++ b/dev/jade/includes/footer.jade
@@ -12,19 +12,19 @@ footer.footer
 						h5.widget__title Najczęściej odwiedzane
 						ul.list-unstyled.list--arrowed
 							li: a(href="transport-miedzynarodowy", title="Transport międzynarodowy") 
-								i.fa.fa-angle-right(aria-hidden='true')
+								i.fa.fa-caret-right(aria-hidden='true')
 								span Transport międzynarodowy
 							li: a(href="sprzedaz-tarcicy", title="Sprzedaż tarcicy") 
-								i.fa.fa-angle-right(aria-hidden='true')
+								i.fa.fa-caret-right(aria-hidden='true')
 								span Sprzedaż tarcicy
 							li: a(href="magazyn-czasowego-skladowania", title="Magazyn czasowego składowania") 
-								i.fa.fa-angle-right(aria-hidden='true')
+								i.fa.fa-caret-right(aria-hidden='true')
 								span Magazyn czasowego składowania
 							li: a(href="najczesciej-zadawane-pytania", title="Faq") 
-								i.fa.fa-angle-right(aria-hidden='true')
+								i.fa.fa-caret-right(aria-hidden='true')
 								span FAQ		
 							li: a(href="kontakt", title="Kontakt") 
-								i.fa.fa-angle-right(aria-hidden='true')
+								i.fa.fa-caret-right(aria-hidden='true')
 								span Kontakt
 			.col-sm-12.col-md-6.col-lg-4
 				.widget.widget--footer
@@ -66,17 +66,3 @@ footer.footer
 		'Rezygnuję',
 		'Jeśli chcesz wyznaczyć trasę pomiędzy wybraną przez Ciebie lokalizacją, a Naszą firmą wypełnij wymagane pole znajdujące się poniżej, a następnie kliknij przycisk <em>Wyznacz trasę</em>. Aby przedstawić Ci ją w jak najlepszej formie, aplikacja google-maps otworzy się w nowej zakładce.'
 	)
-	//- .modal.fade.google-maps-direction(tabindex='-1', role='dialog', aria-labelledby='google-maps-direction', aria-hidden='true')
-	//- 	.modal-dialog
-	//- 		.modal-content
-	//- 			.modal-header 
-	//- 				h6 Czy chcesz sprawdzić #[strong lokalizację firmy Bałtex] na google maps?
-	//- 			.modal-body
-	//- 				p Google maps z lokalizacją otworzy się w nowym oknie. Umożliwi Ci to m.in.
-	//- 				ul.list-unstyled
-	//- 					li - zlokalizowanie Naszej siedziby na mapie Polski
-	//- 					li - wytyczenie trasy pomiędzy 2 punktami
-	//- 				#google-map-modal
-	//- 			.modal-footer
-	//- 				button.btn.btn-second.js-btn-google-location(type='button') Zobacz widok mapy
-	//- 				button.btn.btn-secondary.js-btn-modal-close(type='button', data-dismiss='modal') Rezygnuję
