--- a/dev/sass/bootstrap/_custom.scss
+++ b/dev/sass/bootstrap/_custom.scss
@@ -12,6 +12,7 @@ $font-size-h3			: 3.5rem;
 $font-size-h4			: 3.0rem;
 $font-size-h5			: 2.5rem;
 $font-size-h6			: 2.0rem;
+$font-weight-base       : 400;
 
 //- Paths
 $path_assets: '../../assets/';
