--- a/dev/sass/site/core/_typography.scss
+++ b/dev/sass/site/core/_typography.scss
@@ -8,6 +8,16 @@ h1,h2,h3,h4,h5,h6 {
 	line-height: 1.4;
 }
 
+p + h5 {
+	padding-top: $spacer;
+}
+
+.heading--bordered {
+	border-bottom: 1px solid $gray-lighter;
+	padding-bottom: 5px;
+	margin-bottom: $spacer;
+}
+
 a {
 	@include transition;
 	&.link {
