BAŁTEX-22 Dodanie jQuery sticki + oprogramowanie formularza kontaktowego

--- a/dev/jade/includes/addres-box.jade
+++ b/dev/jade/includes/addres-box.jade
@@ -1,6 +1,6 @@
 .component.address-box
     .address-box__inner
-        h5.address-box__title Adres firmy
+        h5.address-box__title Adres #[strong firmy]
         h6.address-box__company-name F.H.U. Bałtex
         ul.list-unstyled.address-box__list
             li.address-box__list-element
