--- a/dev/jade/js/scripts.jade
+++ b/dev/jade/js/scripts.jade
@@ -5,4 +5,4 @@ script(src=path_js + "vendor.min.js", charset="UTF-8")
 script(src=path_js + "plugins/plugins.min.js", charset="UTF-8")
 script(src=path_js + "components/components.js", charset="UTF-8")
 script(src=path_js + "core.js", charset="UTF-8")
-script(async, defer src="https://maps.googleapis.com/maps/api/js?key=" + apiKey + "&callback=initMap")
+script(async, defer src="https://maps.googleapis.com/maps/api/js?key=" + apiKey)
