--- a/dev/sass/site/components/_comp-address-box.scss
+++ b/dev/sass/site/components/_comp-address-box.scss
@@ -1,5 +1,6 @@
 .address-box {
     border: 1px solid $gray;
+    margin-bottom: $spacer;
     &__inner {
         background-color: #f9f9f9;
         padding: $spacer;
@@ -7,6 +8,7 @@
     &__title {
         color: $brand-primary;
         padding-bottom: $spacer-xs;
+        font-weight: 300;
     }
     &__company-name {
         font-size: $font-size-base;
