--- a/dev/sass/bootstrap/_custom.scss
+++ b/dev/sass/bootstrap/_custom.scss
@@ -55,3 +55,11 @@ $container-max-widths: (
 );
 
 $secion-max-width: 1700px;
+
+//- Forms
+$input-padding-x:     1.5rem !default;
+$input-padding-y:     1rem !default;
+$input-line-height:   1.4 !default;
+$input-border-focus:  $brand-primary;
+$input-border-color:  $gray;
+$textarea-height:     250px;
