--- a/dev/sass/site/components/_comp-form.scss
+++ b/dev/sass/site/components/_comp-form.scss
@@ -27,6 +27,35 @@
         font-weight: 400;
     }
     &-control {
+        @include transition;
+    }
+    textarea {
+        height: $textarea-height;
+    }
+}
 
+//- Style dla widgetu selectmenu
+.ui-selectmenu-button {
+    background-color: transparent;
+    border-radius: 0;
+    padding: $input-padding-y $input-padding-x;
+    line-height: $input-line-height;
+    border-color: $input-border-color;
+    span.ui-selectmenu-text {
+        padding: 0;
+        font-size: $font-size-base;
+        font-family: $font-family-sans-serif;
+    }
+}
+.ui-selectmenu-menu {
+    box-shadow: 0px 2px 5px #ebebeb;
+    .ui-menu-item {
+        padding: $input-padding-y $input-padding-x;
+        border: 0;
+        &.ui-state-focus {
+            background-color: #f6f6f6;
+            border: 0;
+            margin: 0;
+        }
     }
 }
