--- a/dev/sass/site/components/_comp-form.scss
+++ b/dev/sass/site/components/_comp-form.scss
@@ -31,6 +31,11 @@
     }
     textarea {
         height: $textarea-height;
+        resize: none;
+    }
+    .textarea-signs {
+        text-align: right;
+        padding: 5px 0;
     }
 }
 
@@ -46,6 +51,11 @@
         font-size: $font-size-base;
         font-family: $font-family-sans-serif;
     }
+    //- Dodanie animacji strzałki [rozwinięcia,zwinięcia]
+    .ui-icon {
+        background: none;
+        text-indent: 0;
+    }
 }
 .ui-selectmenu-menu {
     box-shadow: 0px 2px 5px #ebebeb;
@@ -56,6 +66,17 @@
             background-color: #f6f6f6;
             border: 0;
             margin: 0;
+        }
+    }
+}
+
+//- Style dla widgetu dialog
+.ui-dialog {
+    &--simple {
+        border-radius: 0;
+        .ui-dialog-content {
+            height: 150px !important; /* Konieczność nadpisania dziwnego zachowania setHeight z pluginu */
+            padding-right: 0;
         }
     }
 }
