--- a/dev/sass/site/components/_comp-top-nav.scss
+++ b/dev/sass/site/components/_comp-top-nav.scss
@@ -39,6 +39,7 @@
                 right: 15px;
                 top: 50%;
                 transform: translateY(-50%);
+                pointer-events: none;
             }
             &:hover {
                 color: #fff;
