--- a/dev/jade/includes/top-bar.jade
+++ b/dev/jade/includes/top-bar.jade
@@ -13,7 +13,7 @@
             .col-sm-6.col-md-9.col-lg-7.col-xl-6
                 ul.list-unstyled.top-nav
                     li.top-nav__element
-                        a(href="galeria-zdjec", class="top-nav__anchor") Galeria zdjęć
+                        a(href="o-firmie", class="top-nav__anchor") O firmie
                     li.top-nav__element
                         a(href="najczesciej-zadawane-pytania", class="top-nav__anchor") Faq
                     li.top-nav__element
