--- a/dev/sass/site/components/_comp-top-nav.scss
+++ b/dev/sass/site/components/_comp-top-nav.scss
@@ -1,5 +1,7 @@
 .top-bar {
     padding: $spacer-xs/2 0;
+    max-width: $secion-max-width;
+    margin: 0 auto;
 }
 .top-nav {
     @include clearfix;
