--- a/dev/sass/site/components/_components.scss
+++ b/dev/sass/site/components/_components.scss
@@ -66,3 +66,9 @@
 
 //- Contact form
 @import "comp-form";
+
+//- Timeline
+@import "comp-timeline";
+
+//- Rounded box
+@import "comp-rounded-box";
