--- a/dev/sass/site/components/_comp-page-header.scss
+++ b/dev/sass/site/components/_comp-page-header.scss
@@ -1,5 +1,7 @@
 .page-header {
     width: 100%;
+    max-width: $secion-max-width;
+    margin: 0 auto;
     &__inner {
         position: relative;
         padding: $spacer-xl 0 0 0;
